# bmads

./: .gitignore  CMakeLists.txt  README.md  ads.qrc
examples/: CMakeLists.txt  icontitlewidget.cpp  icontitlewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
resource/style/: default-windows.css
src/: CMakeLists.txt  adsglobal.cpp  adsglobal.h  containerwidget.cpp  containerwidget.h  dropoverlay.cpp  dropoverlay.h  floatingwidget.cpp  floatingwidget.h  internal.cpp  internal.h  sectioncontent.cpp  sectioncontent.h  sectioncontentwidget.cpp  sectioncontentwidget.h  sectiontitlewidget.cpp  sectiontitlewidget.h  sectionwidget.cpp  sectionwidget.h
